Fixed soap machine img z-index. Corrected text.

--- a/src/app.css
+++ b/src/app.css
@@ -173,6 +173,7 @@ a {
 }
 
 .soap__machine {
+  z-index: -1;
   width: 200px;
   border-radius: 10px;
   border: 5px solid rgba(0, 0, 0, 0.75);
