--- a/src/assets/scss/_about.scss
+++ b/src/assets/scss/_about.scss
@@ -7,6 +7,7 @@
 }
 
 .soap__machine {
+  z-index: -1;
   width: 200px;
   border-radius: 10px;
   border: $image-border;
